# libcgmath

./: CMakeLists.txt
include/cgmath/: arithmetic.h  array.h  common.h  point.h  vec.h
include/cgmath/impls/: common.h  dot.h  norm.h  swizzle.h
test/: unit.cpp
